--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
             <div class="portfolio-tag">Tax Services</div>
             <div class="portfolio-name">Express Tax Returns</div>
             <p class="portfolio-desc">A clean, trustworthy site for a local tax preparation firm focused on converting first-time visitors into booked appointments.</p>
-            <a href="https://cleverwebco.github.io/expresstaxreturns" target="_blank" class="portfolio-link">View Live Site →</a>
+            <a href="https://cleverwebco.com/expresstaxreturns/" target="_blank" class="portfolio-link">View Live Site →</a>
           </div>
         </div>
         <div class="portfolio-card">
